--- a/package.json
+++ b/package.json
@@ -6,14 +6,20 @@
   "author": "Daniel Carr <d.douglas.carr@gmail.com>",
   "license": "private",
   "scripts": {
-    "build": "webpack"
+    "build": "webpack",
+    "start": "webpack-dev-server"
   },
   "devDependencies": {
     "ts-loader": "^6.2.0",
     "typescript": "^3.6.3",
-    "webpack": "^4.41.0"
+    "webpack": "^4.41.0",
+    "webpack-cli": "^3.3.9",
+    "webpack-dev-server": "^3.8.2"
   },
   "dependencies": {
-    "webpack-cli": "^3.3.9"
+    "@types/react": "^16.9.5",
+    "@types/react-dom": "^16.9.1",
+    "react": "^16.10.2",
+    "react-dom": "^16.10.2"
   }
 }
