--- a/package.json
+++ b/package.json
@@ -7,9 +7,11 @@
   "license": "private",
   "scripts": {
     "build": "webpack",
-    "start": "webpack-dev-server"
+    "dev": "webpack-dev-server",
+    "server": "live-server"
   },
   "devDependencies": {
+    "live-server": "^1.2.1",
     "ts-loader": "^6.2.0",
     "typescript": "^3.6.3",
     "webpack": "^4.41.0",
