--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "live-server": "^1.2.1",
     "ts-loader": "^6.2.0",
     "typescript": "^3.6.3",
+    "typescript-plugin-styled-components": "^1.4.3",
     "webpack": "^4.41.0",
     "webpack-cli": "^3.3.9",
     "webpack-dev-server": "^3.8.2"
@@ -21,7 +22,9 @@
   "dependencies": {
     "@types/react": "^16.9.5",
     "@types/react-dom": "^16.9.1",
+    "@types/styled-components": "^4.1.19",
     "react": "^16.10.2",
-    "react-dom": "^16.10.2"
+    "react-dom": "^16.10.2",
+    "styled-components": "^4.4.0"
   }
 }
