--- a/package.json
+++ b/package.json
@@ -8,9 +8,14 @@
   "scripts": {
     "build": "webpack",
     "dev": "webpack-dev-server",
-    "server": "live-server"
+    "server": "live-server",
+    "lint": "eslint ./src --ext .ts,.tsx"
   },
   "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^2.4.0",
+    "@typescript-eslint/parser": "^2.4.0",
+    "eslint": "^6.5.1",
+    "eslint-plugin-react": "^7.16.0",
     "live-server": "^1.2.1",
     "prettier": "^1.18.2",
     "ts-loader": "^6.2.0",
