--- a/package.json
+++ b/package.json
@@ -6,9 +6,10 @@
   "author": "Daniel Carr <d.douglas.carr@gmail.com>",
   "license": "private",
   "scripts": {
-    "build": "webpack",
-    "dev": "webpack-dev-server",
-    "server": "live-server",
+    "build-client": "webpack --config webpack.client.config.js",
+    "build-server": "webpack --config webpack.server.config.js",
+    "watch-client": "webpack-dev-server --config webpack.client.config.js",
+    "dev-server": "npm run build-server && node ./dist/server/index.js",
     "lint": "eslint ./src --ext .ts,.tsx"
   },
   "devDependencies": {
@@ -16,7 +17,6 @@
     "@typescript-eslint/parser": "^2.4.0",
     "eslint": "^6.5.1",
     "eslint-plugin-react": "^7.16.0",
-    "live-server": "^1.2.1",
     "prettier": "^1.18.2",
     "ts-loader": "^6.2.0",
     "typescript": "^3.6.3",
@@ -26,9 +26,11 @@
     "webpack-dev-server": "^3.8.2"
   },
   "dependencies": {
+    "@types/express": "^4.17.1",
     "@types/react": "^16.9.5",
     "@types/react-dom": "^16.9.1",
     "@types/styled-components": "^4.1.19",
+    "express": "^4.17.1",
     "react": "^16.10.2",
     "react-dom": "^16.10.2",
     "styled-components": "^4.4.0"
