--- a/package.json
+++ b/package.json
@@ -13,6 +13,11 @@
     "lint": "eslint ./src --ext .ts,.tsx"
   },
   "devDependencies": {
+    "@types/express": "^4.17.1",
+    "@types/react": "^16.9.5",
+    "@types/react-dom": "^16.9.1",
+    "@types/react-redux": "^7.1.5",
+    "@types/styled-components": "^4.1.19",
     "@typescript-eslint/eslint-plugin": "^2.4.0",
     "@typescript-eslint/parser": "^2.4.0",
     "eslint": "^6.5.1",
@@ -26,13 +31,11 @@
     "webpack-dev-server": "^3.8.2"
   },
   "dependencies": {
-    "@types/express": "^4.17.1",
-    "@types/react": "^16.9.5",
-    "@types/react-dom": "^16.9.1",
-    "@types/styled-components": "^4.1.19",
     "express": "^4.17.1",
     "react": "^16.10.2",
     "react-dom": "^16.10.2",
+    "react-redux": "^7.1.1",
+    "redux": "^4.0.4",
     "styled-components": "^4.4.0"
   }
 }
